--- a/app/views/shared/_logo.html.erb
+++ b/app/views/shared/_logo.html.erb
@@ -1,7 +1,7 @@
 <div class= "logo">
 
-            <div class= "span3">
-            	<div class = "a"></div>
+     <!--       <div class= "span3">
+            	
             	<div id= "z">
             		<div class = "a"></div>
             		<div class = "b">
@@ -17,4 +17,7 @@
             <div class= "span9">
              
             </div>
+      -->
+      <%= image_tag "logo.jpg", id:"image_logo"%>
+      BIKES BECHNU.com
           </div>
