--- a/app/views/bikes/_search_bikes.html.erb
+++ b/app/views/bikes/_search_bikes.html.erb
@@ -18,18 +18,18 @@
       <%=image_tag "default_image.jpg"%>
     <%else%>
 
-    <%= image_tag bike.pictures.last.file.url(:medium), id: "bike_picture" %>
+    <%= image_tag bike.pictures.last.file.url(:original), id: "bike_picture" %>
     <%end%>
   </div> <!-- span5 Image of the searched bike --> 
   <div class= "span7">
    
       <table class= "result_table">
         <tr id = "result_header">
-          <td>
-            <b> <%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant if !bike.variant.nil? %></b>
+          <td class= "listing_title">
+             <%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant if !bike.variant.nil? %></b>
           </td>
           <td>
-            <h3><%= number_to_currency(bike.price,:unit => "Rs ",:precision => 0) %></h3>
+            <legend><%= number_to_currency(bike.price,:unit => "Rs ",:precision => 0) %></legend>
           </td>
         </tr>
         <tr>
@@ -42,10 +42,10 @@
                 <%= bike.body %> 
               </li>
               <li>
-                <%= bike.address %>
+                <%= bike.location %>
               </li>
             </ul> 
-          <td>
+          <td class= "view_bike_link">
             
             <%= link_to 'View bike',
                         bike_path(bike, sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type]), :class => 'btn btn-inverse' %>
