--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -7,13 +7,13 @@
         <%= render "current_selection"%>   
           <div class="sidebar-nav">
                 <ul class="nav nav-list" id = "selection">
-                     <legend>Filters</legend>
+                     <legend>Refine Search</legend>
                     
                     <li><i class="icon-plus-sign"><a></a></i><i class="icon-minus-sign"><a></a></i>Type
                         <ul class = "type">
                             
                             <% @types.each do |type| %>
-                                <li> <%= link_to type + " ("+@bikes.where(type: type).count.to_s+")", bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color], type: type )%> 
+                                <li> <%= link_to type + " ("+@bikes.where(type: type).count.to_s+")", bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], location: params[:location],model: params[:model], color: params[:color], type: type, price_from: params[:price_from], price_to: params[:price_to]  )%> 
                                 </li>
                              <% end %>
                         </ul>
@@ -22,7 +22,7 @@
                         <ul>
                             <% @bodies.each do |body| %>
                                 <li>
-                                    <%= link_to body, bikes_path(sort: params[:sort], :direction => params[:direction], body: body, make: params[:make], color: params[:color],type: params[:type], model: params[:model])%> (<%=@bikes.where(body: body).count%>)
+                                    <%= link_to body, bikes_path(sort: params[:sort], :direction => params[:direction], body: body, make: params[:make], color: params[:color],type: params[:type], location: params[:location],model: params[:model], price_from: params[:price_from], price_to: params[:price_to] )%> (<%=@bikes.where(body: body).count%>)
                                 </li>  
                             <% end %>
                         </ul>
@@ -31,7 +31,7 @@
                         <ul>
                             <% @makes.each do |make| %>
                                 <li>
-                                    <%= link_to make, bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], model: params[:model], color: params[:color],type: params[:type],make: make)%> (<%=@bikes.where(make: make).count%>)
+                                    <%= link_to make, bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], model: params[:model], color: params[:color],location: params[:location],type: params[:type],make: make, price_from: params[:price_from], price_to: params[:price_to] )%> (<%=@bikes.where(make: make).count%>)
                                 </li>
                             <% end %>
                         </ul>
@@ -40,7 +40,7 @@
                         <ul>
                             <% @models.each do |model| %>
                                 <li>
-                                    <%= link_to model, bikes_path(sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], color: params[:color],type: params[:type],model: model)%> (<%=@bikes.where(model: model).count%>)
+                                    <%= link_to model, bikes_path(sort: params[:sort], :direction => params[:direction], location: params[:location],body: params[:body], make: params[:make], color: params[:color],type: params[:type],model: model, price_from: params[:price_from], price_to: params[:price_to] )%> (<%=@bikes.where(model: model).count%>)
                                 </li>  
                             <% end %>
                         </ul>
@@ -49,7 +49,7 @@
                         <ul>  
                             <% @colors.each do |color| %>
                                 <li>
-                                    <%= link_to color, bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: color )%> (<%=@bikes.where(color: color).count%>)
+                                    <%= link_to color, bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: color,location: params[:location], price_from: params[:price_from], price_to: params[:price_to]  )%> (<%=@bikes.where(color: color).count%>)
                                     
                                 </li>
                             <% end %>
@@ -59,10 +59,27 @@
                         <ul>  
                             <% @location.each do |location| %>
                                 <li>
-                                    <%= link_to location, bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: location )%> (<%=@bikes.where(address: location).count%>)
+                                    <%= link_to location, bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: location, price_from: params[:price_from], price_to: params[:price_to]  )%> (<%=@bikes.where(address: location).count%>)
                                     
                                 </li>
                             <% end %>
+                        </ul>
+                    </li>
+                    
+                    <li><i class="icon-plus-sign"><a></a></i><i class="icon-minus-sign"><a></a></i>Price
+                        <ul>
+                          <li><%= link_to "Up to Rs. 10,000",bikes_path(price_from: "0", price_to: "10001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 10,000 to Rs. 25,000",bikes_path(price_from: "9999", price_to: "25001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 25,000 to Rs. 50,000",bikes_path(price_from: "24999", price_to: "50001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li            >
+                          <li><%= link_to "Rs. 50,000 to Rs. 75,000",bikes_path(price_from: "49999", price_to: "75001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 75,000 to Rs. 1,00,000",bikes_path(price_from: "74999", price_to: "100001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 1,00,000 to Rs. 1,50,000",bikes_path(price_from: "99999", price_to: "150001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 1,50,000 to Rs. 2,00,000",bikes_path(price_from: "149999", price_to: "200001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 2,00,000 to Rs. 3,00,000",bikes_path(price_from: "199999", price_to: "300001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 3,00,000 to Rs. 4,00,000",bikes_path(price_from: "299999", price_to: "400001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 4,00,000 to Rs. 5,00,000",bikes_path(price_from: "399999", price_to: "500001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "Rs. 5,00,000 to Rs. 10,00,000",bikes_path(price_from: "499999", price_to: "1000001", sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
+                          <li><%= link_to "More than Rs. 10,00,000",bikes_path(price_from: "999999", price_to: nil, sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%></li>
                         </ul>
                     </li>
                 </ul>
@@ -112,7 +129,8 @@
 
 var div =1
  $(window).scroll(function() { 
- 
+ console.log($(window).scrollTop() + $(window).height());
+ console.log($(document).height())
     if($(window).scrollTop() + $(window).height() == $(document).height()) {
        
         div=div+1
@@ -122,13 +140,51 @@ var div =1
         var link='/bikes?page='+ div.toString()+ ' div.scroll' 
         <%end%>
         $("div." +div.toString()).load(link, function() {
-  console.log(link)
  
-});
+        });
 
         
     }
 });
+    
+    $(document).scroll(function() {
+      if ($(window).width() > 979){
+      var height =  $(".current_selection").height()+ 90
+    if ($(this).scrollTop() > 186) {
+        $('.current_selection').css({ 
+            "position" : 'fixed',
+            "width": '226',
+            "margin-top": 63,
+            "top" : 0 });
+        $(".icon-remove").css({
+          "position": "fixed",
+          "left": "28%"
+          
+        })
+        $('.sidebar-nav').css({ 
+            "position" : 'fixed',
+            "width": '226',
+            "margin-top": height,
+            "top" : 0 });
+        $('.header').css({ 
+            "position" : 'fixed',
+            "width": '708',
+            "height": '18',
+            "margin-top": 63,
+            "top" : 0 });
+    } else {
+        $('.current_selection').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
+        $('.sidebar-nav').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
+         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708' });
+         $(".icon-remove").css({
+          "position": "absolute",
+          "left":"84%"
+        })
+    }
+  }
+})
+  
+   
  $("select.sort_select").change(function() {
     
  
@@ -161,6 +217,7 @@ var div =1
     
  };
   });
+
 </script>
 <%= javascript_include_tag "bikes/index" %>
 
