--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Resend confirmation instructions</h2>
+<div class = "edit_login_user_page">
+<legend>Resend confirmation instructions</legend>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -10,3 +11,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</end>
