--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,5 @@
-<h2>Change your password</h2>
+<div class = "edit_login_user_page">
+<legend>Change your password</legend>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -14,3 +15,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
