--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,11 @@
-<div class = "edit_user_page">
+<div class = "edit_login_user_page">
 <legend>Edit Account</legend>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
  <div><%= f.label :name %><br />
   <%= f.text_field :name %></div>
+  <%if current_user.provider.nil?%>
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
@@ -16,7 +17,7 @@
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
-
+  <%end%>
   <div><%= f.submit "Update" %></div>
 <% end %>
 
