--- a/app/views/bike_specs/_search_bikes.html.erb
+++ b/app/views/bike_specs/_search_bikes.html.erb
@@ -18,7 +18,7 @@
       <%=image_tag "default_image.jpg"%>
     <%else%>
 
-    <%= image_tag bike.pictures.last.file.url(:medium), id: "bike_picture" %>
+    <%= image_tag bike.pictures.last.file.url(:original), id: "bike_picture" %>
     <%end%>
   </div> <!-- span5 Image of the searched bike --> 
   <div class= "span7">
