bikespec_page specs

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1110,6 +1110,7 @@ z-index: -1;
 width: 100%;
 position: relative;
 text-indent: -10px;
+
 }
 @media(min-width: 769px){
 	#main_page_border {
@@ -1130,6 +1131,14 @@ font-size: 14px;
 font-size: 0px;
 background: transparent
 }
+}
+a#logo_link{
+	color:black;
+}
+a#logo_link:hover {
+	color:black;
+	backgroung: transparent;
+	text-decoration: none;
 }
 //####################Registration page#################################################
 .edit_login_user_page
@@ -1229,4 +1238,33 @@ border: 1px solid #888888;
 	padding: 12px;
 	margin-top: 10px;
 	box-shadow: 10px 5px 10px #888888;
+}
+.spec_toggle 
+{
+	padding-left: 15px;
+	padding: 10px;
+	background: #f1f1f1;
+	margin-bottom: 5px;
+	margin-left: 5px;
+	position: relative;
+	border-radius: 10px;
+	margin-right: 10px;
+	font-size: 16px;
+	font-weight: bold;
+		a{
+			color: #0088cc;
+		}
+		a:hover 
+		{
+			background-color: transparent;
+			text-decoration: none;
+			color: #0088cc;
+		}
+}
+.icon-chevron-right {
+
+float: right;
+}
+.icon-chevron-up {
+float: right
 }
