--- a/app/views/shared/_logo.html.erb
+++ b/app/views/shared/_logo.html.erb
@@ -1,4 +1,4 @@
-<div class= "logo">
+<a href="/" id="logo_link"><div class= "logo">
 
      <!--       <div class= "span3">
             	
@@ -19,5 +19,6 @@
             </div>
       -->
       <%= image_tag "logo.jpg", id:"image_logo"%>
-      BIKES BECHNU.com
+      BIKES.BECHNU.com
           </div>
+</a>
