--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Bikesales</a>
+          <a class="brand" href="/">Bikes.Bechnu</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to "Bikes For Sale", bikes_path%></li>
