--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,6 +134,14 @@ $("document").ready(function() {
       setTimeout(function() {
           $("a.btn.btn-navbar").trigger('click');
       },1);}
+     var width= $(window).width()/5
+      
+        $("div.logo").animate({
+    
+    textIndent: width,
+
+    
+  }, 9500 );
 });
 
 //Google Analytics 
