--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
 
 
-    <link href='<%=image_tag "favicon.ico"%>' rel="shortcut icon">
+    <%=favicon_link_tag 'favicon.ico'%>
     <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
     <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
