--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1198,6 +1198,7 @@ border: 1px solid #888888;
 	box-shadow: 10px 5px 10px #888888;
 	border: #888888 solid 1px;
 	border-radius: 5px;
+	margin-bottom: 50px;
 }
 #showroom_browse
 {
